# epw

./: Cargo.toml  deny.toml  flake.nix  rustfmt.toml  taplo.toml
.config/: hakari.toml
.github/: dependabot.yml
.github/workflows/: build.yml
crates/epw/: Cargo.toml
crates/epw-ex/: .gitignore  README.md  mix.exs
crates/epw-ex/lib/: epw.ex
crates/epw-ex/lib/epw/: native.ex
crates/epw-ex/native/epw_ex/: Cargo.toml
crates/epw-ex/native/epw_ex/src/: lib.rs
crates/epw-ex/test/: epw_test.exs
crates/epw-py/: Cargo.toml  epw.pyi  pyproject.toml
crates/epw-py/python/epw/: __init__.py
crates/epw-py/src/: lib.rs
crates/epw-py/tests/: test_epw.py
crates/epw/src/: lib.rs
crates/epw/src/fixtures/: bad_wind_dir_col.epw  example1.epw  invalid_timestamp.epw  missing_columns.epw  short_header.epw
crates/epw/src/snapshots/: epw__tests__fixture_1.snap
crates/workspace-hack/: Cargo.toml
nix/: python.nix  rust-ws.nix
