[package]
name = "epw"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
doctest = false

[dependencies]
chrono = { version = "~0.4", default-features = false }
itertools = "~0.14"
polars = { version = "~0.46", optional = true, default-features = false, features = [
  "dtype-datetime",
] }
thiserror = "~2.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
insta = { version = "1.42.1" }
polars = { version = "~0.46", default-features = false, features = [
  "dtype-datetime",
  "json",
] }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }

[features]
default = []
polars = ["dep:polars"]
