[package]
name = "epw"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
doctest = false

[dependencies]
chrono = { version = "~0.4", default-features = false }
itertools = "~0.14"
thiserror = "~2.0"

[dev-dependencies]
chrono = { version = "~0.4", default-features = false, features = ["serde"] }
insta = { version = "1.42.1", features = ["json"] }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
