[package]
name = "epw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
chrono = { version = "~0.4", default-features = false }
itertools = "~0.15"
thiserror = "~2.0"

[dev-dependencies]
chrono = { version = "~0.4", default-features = false, features = ["serde"] }
insta = { version = "1.42.1", features = ["json"] }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
